fixed summary page layout bugs

--- a/website/resources/css/cart.css
+++ b/website/resources/css/cart.css
@@ -73,6 +73,7 @@
     margin-bottom: 5px;
     margin-left:15px;
     list-style-type: none;
+    text-align: left;
 }
 
 .list-option-item{
